# SC01_PLUS_MARINE_INSTRUMENTS

./: README.md  platformio.ini
SquareLineProject/: wind_instruments.sll  wind_instruments.spj  wind_instruments_events.py
SquareLineProject/assets/: ui_font_condensed60.c  ui_font_condensed60.fcfg  ui_font_condensed80.c  ui_font_freeman160.c  ui_font_freeman160.fcfg  ui_font_freeman60.fcfg
graphics/: SignalKinstrumentsLogo.xcf
src/: SC01Plus.h  lv_conf.h  main.cpp  utils.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_freeman60.c
src/ui/images/: ui_img_1213530082.c  ui_img_1486399645.c  ui_img_1551684850.c  ui_img_674587949.c  ui_img_827446305.c  ui_img_arrow_app_png.c  ui_img_arrow_true_png.c  ui_img_scale_back_png.c  ui_img_signalkinstrumentslogo_png.c
src/ui/screens/: ui_ScreenCompass.c  ui_ScreenDepth.c  ui_ScreenMain.c  ui_ScreenWind.c
